tests/backend/checkmach/fail11.output
File "fail11.ml", line 14, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail11.f (camlFail11.f_HIDE_STAMP)
